@@ -57,15 +57,6 @@ class Hg(Fetch):
 
         if 'rev' in ud.parm:
             ud.revision = ud.parm['rev']
-        else:
-            #
-            rev = data.getVar("SRCREV", d, 0)
-            if rev and "get_srcrev" in rev:
-                ud.revision = self.latest_revision(url, ud, d)
-            elif rev:
-                ud.revision = rev
-            else:
-                ud.revision = ""
 
         ud.localfile = data.expand('%s_%s_%s_%s.tar.gz' % (ud.module.replace('/', '.'), ud.host, ud.path.replace('/', '.'), ud.revision), d)
 
