@@ -77,6 +77,7 @@ Changes in Bitbake 1.9.x:
 	  fetching (we don't care about the index). Fixes fetch errors.
 	- Add BB_GENERATE_MIRROR_TARBALLS option, set to 0 to make git fetches 
 	  faster at the expense of not creating mirror tarballs.
+	- SRCREV handling updates, improvements and fixes from Poky
 
 Changes in Bitbake 1.8.0:
 	- Release 1.7.x as a stable series
